# kuka_iiwa_interface

./: .gitignore  README.md  kuka_iiwa_interface.repos  repos.yaml
iiwa_robot_controllers/: CMakeLists.txt  package.xml
iiwa_robot_controllers/launch/: arm_controllers.launch  arm_controllers_shim.launch  position_controller.launch  velocity_controller.launch  velocity_shim.launch
iiwa_robot_controllers/msg/: FRICommand.msg  FRIState.msg  PositionCommand.msg
iiwa_robot_controllers/src/: iiwa_FRI_position_interface.cpp  iiwa_FRI_state_position_torque_shim.cpp  iiwa_joint_state_publisher.cpp  iiwa_position_controller.cpp  iiwa_stack_velocity_shim.cpp  iiwa_velocity_torque_controller.cpp
iiwa_robot_controllers/srv/: SetInjectedError.srv
lcm/: CMakeLists.txt  package.xml
linux_fri_client/: CMakeLists.txt  package.xml
robotiq_3f_description/: CMakeLists.txt  LICENSE  package.xml
robotiq_3f_description/launch/: robotiq_3f_gripper.launch.xml  visualize_description.launch.xml
robotiq_3f_description/urdf/: robotiq_3f_gripper.xacro  robotiq_3f_gripper_finger_macro.xacro  robotiq_3f_gripper_macro.xacro
robotiq_3f_driver/: CMakeLists.txt  README.md  package.xml
robotiq_3f_driver/src/: crc_utils.cpp  data_utils.cpp  default_driver.cpp  default_driver_utils.cpp  default_serial.cpp  driver.cpp  driver_utils.cpp  robotiq_3f_driver_node.cpp
robotiq_3f_interfaces/: CMakeLists.txt  package.xml
robotiq_3f_interfaces/msg/: GraspingMode.msg  IndependentControlCommand.msg  ObjectDetectionStatus.msg  SimpleControlCommand.msg  Status.msg
robotiq_3f_interfaces/srv/: ChangeGraspingMode.srv
robotiq_3f_transmission_plugins/: CMakeLists.txt  package.xml  transmission_plugins.xml
robotiq_3f_transmission_plugins/src/: individual_control_transmission.cpp  individual_control_transmission_loader.cpp
victor_control/: CMakeLists.txt  package.xml
victor_control/config/: victor_control.yaml  victor_control_ok.yaml  victor_pid_gains.yaml
victor_control/launch/: victor_control.launch  victor_control_gazebo.launch
victor_control/test/: gripper_command_test_msg.yaml
victor_description/: CMakeLists.txt  package.xml
victor_description/launch/: victor_description.launch.xml  visualize_gripper.launch  visualize_victor.launch  visualize_victor.launch.xml
victor_description/urdf/: dual_iiwa7_no_torso.xacro  gazebo_utilities.xacro  gripper_only.xacro  iiwa.gazebo.xacro  iiwa7.xacro  kinematic_robotiq_grippers.xacro  robotiq_3finger_gripper.gazebo.xacro  robotiq_3finger_gripper.transmission.xacro  robotiq_3finger_gripper.xacro  robotiq_3finger_gripper_articulated.gazebo.xacro  robotiq_3finger_gripper_articulated.transmission.xacro  robotiq_3finger_gripper_articulated.xacro  robotiq_finger.xacro  robotiq_grippers_articulated.xacro  robotiq_grippers_visual.xacro  robotiq_pinch_grasp_tools.xacro  victor.gazebo.xacro  victor.urdf  victor.urdf.xacro  victor_torso.xacro
victor_fake_hardware_interface/: CMakeLists.txt  README.md  package.xml  setup.py
victor_fake_hardware_interface/launch/: fake_dual_arm_lcm_bridge.launch
victor_fake_hardware_interface/scripts/: fake_grippers_node.py  minimal_fake_arm_interface_node.py  minimal_fake_control_mode_interface_node.py
victor_hardware/: CMakeLists.txt  README.md  controllers.xml  kuka_cartesian_controller.xml  package.xml  victor_hardware_interface_plugin.xml
victor_hardware/launch/: dual_arm_lcm_bridge.launch  dual_arm_lcm_bridge.launch.xml  manual_motion.launch  manual_motion.launch.xml  victor_lcm_bridge.launch.xml  victor_lcm_bridge_core.launch.xml
victor_hardware/lcm_defs/: cartesian_control_mode_limits.lcm  cartesian_impedance_parameters.lcm  cartesian_path_execution_parameters.lcm  cartesian_pose.lcm  cartesian_value_quantity.lcm  control_mode.lcm  control_mode_parameters.lcm  joint_impedance_parameters.lcm  joint_path_execution_parameters.lcm  joint_value_quantity.lcm  make_defs.sh  motion_command.lcm  motion_status.lcm  robotiq_3finger_actuator_command.lcm  robotiq_3finger_actuator_status.lcm  robotiq_3finger_command.lcm  robotiq_3finger_object_status.lcm  robotiq_3finger_status.lcm
victor_hardware/scripts/: arm_command_gui.py  arm_control_modes_test.py  arm_wrench_republisher.py  cartesian_cmd_test.py  control_mode_params_widget.ui  grasp_status_node.py  joint_state_publisher.py  manual_motion.py  mock_victor_ros.py  robotiq_grippers_joystick_node.py  slider_widget.ui  victor_command_gui.py  victor_command_gui.ui  victor_lcm_example.py  victor_vr_teleop.py  xbox_control.py
victor_hardware/src/: async_executor.cpp  iiwa_lcm_bridge.cpp  iiwa_lcm_bridge_node.cpp  iiwa_lcm_bridge_utils.cpp  kuka_cartesian_controller.cpp  kuka_control_mode_client.cpp  kuka_joint_group_position_controller.cpp  kuka_joint_position_trajectory_controller.cpp  kuka_joint_trajectory_controller.cpp  kuka_local_cartesian_controller.cpp  lcm_ostream_operators.cpp  lcm_python_bindings.cpp  lcm_ros_conversions.cpp  robotiq_3f_lcm_bridge.cpp  side.cpp  validators.cpp  victor_hardware_interface.cpp
victor_hardware/tests/: test_victor_utils.cpp  victor_utils_test.py
victor_hardware/victor_hardware/: __init__.py  joint_state_publisher.py  victor.py  victor_new.py  victor_ros1.py  victor_utils.py
victor_hardware/victor_lcm_interface/: cartesian_impedance_parameters.py  cartesian_path_execution_parameters.py  cartesian_pose.py  cartesian_value_quantity.py  control_mode.py  control_mode_parameters.py  joint_value_quantity.py  robotiq_3finger_actuator_command.py  robotiq_3finger_actuator_status.py  robotiq_3finger_object_status.py  robotiq_3finger_status.py
victor_hardware_interface/: CMakeLists.txt  package.xml
victor_hardware_interface/config/: victor_control.yaml
victor_hardware_interface/launch/: dual_arm_lcm_bridge.launch  manual_motion.launch  mocap_to_victor_static_transforms.launch  victor_control.launch  (+1 more)
victor_hardware_interface_msgs/: CMakeLists.txt  package.xml  setup.py
victor_hardware_interfaces/: CMakeLists.txt  package.xml
victor_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
victor_servo/: CMakeLists.txt  package.xml
(+547 files in other folders)
