<?xml version="1.0"?>
<package format="3">
  <name>lcm</name>
  <version>0.0.0</version>
  <description>The lcm package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libglib-dev</build_depend>
  <exec_depend>libglib-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
