<?xml version="1.0"?>
<package>
  <name>linux_fri_client</name>
  <version>0.0.0</version>
  <description>Repackaging of the KUKA FRI client SDK into a simple C++ library</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
