<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_3f_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for the Robotiq 3f gripper.</description>
  <license>BSD</license>
  <maintainer email="mitranopeter@gmail.com">Peter Mitrano</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>serial</depend>
  <depend>robotiq_3f_transmission_plugins</depend>
  <depend>robotiq_3f_interfaces</depend>

  <!-- Check code against style conventions using clang-format. -->
  <test_depend>ament_clang_format</test_depend>
  <!-- Check code against style conventions using clang-tidy. -->
  <test_depend>ament_clang_tidy</test_depend>
  <!-- Check every source file contains copyright reference. -->
  <test_depend>ament_cmake_copyright</test_depend>
  <!-- Lint CMake code using cmakelint. -->
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <!-- The auto-magic functions for ease to use of the ament linters in CMake. -->
  <test_depend>ament_lint_auto</test_depend>
  <!-- The list of commonly used linters in the ament build system in CMake. -->
  <test_depend>ament_lint_common</test_depend>

  <!-- Support for gtest and gmock-based tests in the ament buildsystem in CMake. -->
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
