<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_3f_interfaces</name>
  <version>0.0.1</version>
  <description>Messages, services and actions for the Robotiq 3f Controller.</description>
  <license>BSD-3-Clause</license>
  <maintainer email="mitranopeter@gmail.com">Peter Mitrano</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
