<?xml version="1.0"?>
<package format="2">
  <name>victor_control</name>
  <version>0.0.0</version>
  <description>The victor_control package</description>

  <maintainer email="pmitrano@umich.edu">peter</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
</package>
