<?xml version="1.0"?>
<package format="2">
  <name>victor_description</name>
  <version>0.0.0</version>
  <description>The victor_description package</description>

  <maintainer email="dmcconac@todo.todo">dmcconac</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- https://answers.gazebosim.org//question/6568/uri-paths-to-packages-in-the-sdf-model-file/
       This version allows the use of file://victor_description/... inside of Gazebo SDF files -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/.." />
  </export>
</package>
