<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>victor_description</name>
  <version>1.0.0</version>
  <description>The victor_description package</description>

  <maintainer email="dmcconac@todo.todo">dmcconac</maintainer>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>robotiq_3f_description</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
