<?xml version="1.0"?>
<package format="2">
  <name>victor_fake_hardware_interface</name>
  <version>0.0.0</version>
  <description>The victor_fake_hardware_interface package</description>

  <maintainer email="dmcconac@todo.todo">dmcconac</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>victor_hardware_interface_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>victor_hardware_interface_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>victor_hardware_interface_msgs</exec_depend>

</package>
