<?xml version="1.0"?>
<package format="3">
    <name>victor_hardware</name>
    <version>0.0.0</version>
    <description>A ROS 2 C++ node that bridges ROS and LCM, which talks to the Kuka Java code</description>

    <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
    <author email="dmcconac@umich.edu">Dale McConachie</author>
    <author email="pmitrano@umich.edu">Peter Mitrano</author>

    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>ament_cmake_gtest</buildtool_depend>

    <depend>arm_utilities</depend>
    <depend>rclcpp</depend>
    <depend>victor_hardware_interfaces</depend>
    <depend>lcm</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
