<?xml version="1.0"?>
<package format="3">
    <name>victor_hardware</name>
    <version>0.0.0</version>
    <description>A ROS 2 C++ node that bridges ROS and LCM, which talks to the Kuka Java code</description>

    <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
    <author email="dmcconac@umich.edu">Dale McConachie</author>
    <author email="pmitrano@umich.edu">Peter Mitrano</author>

    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>ament_cmake_gtest</buildtool_depend>

    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>ros2_control</depend>
    <depend>ros2_controllers</depend>

    <depend>arm_utilities</depend>
    <depend>victor_hardware_interfaces</depend>
    <depend>lcm</depend>

    <exec_depend>victor_description</exec_depend>
    <exec_depend>robotiq_3f_description</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
