<?xml version="1.0"?>
<package>
  <name>victor_hardware_interface</name>
  <version>0.0.0</version>
  <description>The victor_hardware_interface package</description>

  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <author email="dmcconac@umich.edu">Dale McConachie</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arc_utilities</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>victor_hardware_interface_msgs</build_depend>
  <build_depend>lcm</build_depend>

  <run_depend>arc_utilities</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>victor_hardware_interface_msgs</run_depend>
  <run_depend>lcm</run_depend>


</package>
